infrastructure/openshift/sandbox-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: psd2-sandbox
  name: psd2-sandbox
spec:
  ports:
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8080-tcp-api
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8081-tcp-portal
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deploymentconfig: psd2-sandbox
  sessionAffinity: None
  type: ClusterIP
