infrastructure/openshift/sandbox-route-api-internal.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: psd2-sandbox
  name: api-internal
spec:
  host: psd2-sandbox-dev-api.cloud.adorsys.de
  port:
    targetPort: 8080-tcp-api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: psd2-sandbox
    weight: 100
  wildcardPolicy: None
