infrastructure/openshift/sandbox-route-portal-internal.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: psd2-sandbox
  name: portal-internal
spec:
  host: psd2-sandbox-dev-portal.cloud.adorsys.de
  port:
    targetPort: 8081-tcp-portal
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: psd2-sandbox
    weight: 100
  wildcardPolicy: None
