infrastructure/openshift/sandbox-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: psd2-sandbox
  name: psd2-sandbox
spec:
  host: psd2-sandbox-dev.cloud.adorsys.de
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: psd2-sandbox
    weight: 100
  wildcardPolicy: None
